--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./index.html:/usr/share/nginx/html/index.html
+      - ./logo.png:/usr/share/nginx/html/logo.png
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:80"
